<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Tests">

    <Button
        android:id="@+id/sobhan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mesbha" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/tfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/come" />

    <Button
        android:id="@+id/theList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="List View" />

</LinearLayout>